<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Add_to_cart">Add to cart</string>
    <string name="Condition">Terms and Conditions</string>
    <string name="Conditions">Welcome to the application of Zapyhkoom The goal is to help the client get on Best meat and reasonable prices for everyone They have limited effort to go to designated places For meat sale The application can complete the purchase process</string>
    <string name="Currency">Real</string>
    <string name="Email">Email</string>
    <string name="Incorrect_password">Incorrect password</string>
    <string name="Log_out">Log out</string>
    <string name="Message">Leave your message</string>
    <string name="Products">Products</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Something_Error">Something Error</string>
    <string name="User_Details">User_Details</string>
    <string name="accountِ">Account</string>
    <string name="add_details">Add Details</string>
    <string name="address">Address</string>
    <string name="app_name">ZApyhkoom</string>
    <string name="are_you_sure_back">Are you sure back ?</string>
    <string name="are_you_sure_cancel_order">are_you_sure_cancel_order</string>
    <string name="are_you_sure_finish_order">are you sure finish order?</string>
    <string name="back">back</string>
    <string name="bags">bags covring(15 ryal)</string>
    <string name="bank_account">Bank Accounts</string>
    <string name="binding">Binding</string>
    <string name="call">Send Message</string>
    <string name="cancel">Cancel</string>
    <string name="cart_orders">Cart_Orders</string>
    <string name="choose">choose</string>
    <string name="client_detials">Client_detials</string>
    <string name="complete_buy">Complete Buy</string>
    <string name="complete_order">Complete order</string>
    <string name="completed">Completed</string>
    <string name="contact_us">Contact Us</string>
    <string name="continues">continue</string>
    <string name="covering">covering</string>
    <string name="cutting">Cutting</string>
    <string name="details">details</string>
    <string name="edit">Edit</string>
    <string name="excuse_this_phone_register_before">Exxcuse This Phone register before</string>
    <string name="faild">faild</string>
    <string name="fridge">cut fridge</string>
    <string name="home">Home</string>
    <string name="invaild_email">Invaild Email</string>
    <string name="invaild_phone">Invaild Phone</string>
    <string name="kersh_and_mosran">kersh_and_mosran</string>
    <string name="language1">Arbaic</string>
    <string name="language2">English</string>
    <string name="language_setting">Language setting</string>
    <string name="login">Login</string>
    <string name="map_api_key">AIzaSyDhauu7VGauXPs9aX41Qw6mcB17iuIW2gI</string>    <string name="more">more</string>
    <string name="needs">My Order</string>
    <string name="new_user">New User</string>
    <string name="no">No</string>
    <string name="no_data">No data Found</string>
    <string name="notifications">Notifications</string>
    <string name="offers">Offer</string>
    <string name="ok">Ok</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_details">order_Details</string>
    <string name="ordres">My Order</string>
    <string name="phone_number">Phone_Number</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="plates">Plates Covering (20 ryal)</string>
    <string name="please_enter_address">please enter address</string>
    <string name="product_detials">Product Detials</string>
    <string name="quantaty">quantaty</string>
    <string name="rate">rate</string>
    <string name="sales_rating">Sales Rating</string>
    <string name="send_succsfull">send succsfull</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="size">size</string>
    <string name="skip">Skip</string>
    <string name="slide1_desc">Locate the connection from the map</string>
    <string name="slide1_desc2">Choose the item you want to buy</string>
    <string name="slide1_desc3">Select the specifications of the item you want to buy and press Add to Ca</string>
    <string name="slide1_desc4">Go to the shopping cart to complete the purchase</string>
    <string name="slide1_desc5">Make a payment through one of the payment methods in the application and wait for delivery</string>
    <string name="stand">Flattened</string>
    <string name="stat_app">Start</string>
    <string name="sucess">Success</string>
    <string name="total">Total</string>
    <string name="update_success">update success</string>
    <string name="user_Full_name">Full Name</string>
    <string name="user_not_found">user Not Found</string>
    <string name="user_password">Passsword</string>
    <string name="user_phone">User Phone</string>
    <string name="wait">wait</string>
    <string name="waiting">Waiting</string>
    <string name="without">Without</string>
    <string name="yes">yes</string>
    <string name="complete">Cut up lists</string>
    <string name="hadrmi1">Hadrami Cutting</string>
    <string name="resend">resend</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="field_req">Field Requred</string>
    <string name="with_a_big_bag_and_providing_the_client_with_meat_bags_free_of_charge">With a big bag and providing the client with meat bags (free of charge)</string>
    <string name="sacrifice_cooked_mandi_250_riyals">Sacrifice cooked Mandi (250 riyals)</string>
    <string name="points">Points</string>
</resources>
