<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray0">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_bind"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/binding" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_wait"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/waiting" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_complete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/completed" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_orders" />
</androidx.constraintlayout.widget.ConstraintLayout>