<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/language1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language1" />

            <RadioButton
                android:id="@+id/language2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language2" />
        </RadioGroup>

        <Button
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/linear_shape"
            android:text="@string/choose"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>