<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/too_buy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/loginn"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0">

        <ImageView
            android:id="@+id/back_buy"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="10dp"
            android:src="@drawable/ic_right_arrow" />

        <TextView
            style="@style/textstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_detials"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/lin_buy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/too_buy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/cons_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/buy_cons_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               >

                <TextView
                    android:id="@+id/textbuy"
                    style="@style/textstyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/quantaty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/lin_buy1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textbuy">

                    <Button
                        android:id="@+id/decrement"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:background="@color/gray_transparent"
                        android:text="-"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/increment"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:background="@color/gray_transparent"
                        android:text="+"
                        android:textColor="@color/black"
                        android:textSize="10sp" />
                </LinearLayout>



                    <LinearLayout
                        android:id="@+id/lin_buy2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1.0"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/lin_buy1"
                        >

                        <TextView
                            style="@style/textstyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/size"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/black" />
                    </LinearLayout>


                <LinearLayout
                    android:id="@+id/lin_buy3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/lin_buy2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/cutting"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/cutting"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textbuy2"
                    style="@style/textstyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="10dp"
                    android:text="@string/covering"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/lin_buy3" />

                <RadioGroup
                    android:id="@+id/packing_buy"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textbuy2">

                    <RadioButton
                        android:id="@+id/without"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/without"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/bags"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/bags"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/plates"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/plates"
                        android:theme="@style/MyRadioButton" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textbuy3"
                    style="@style/textstyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="10dp"
                    android:text="@string/kersh_and_mosran"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/packing_buy" />

                <RadioGroup
                    android:id="@+id/Kersh"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textbuy3">

                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/yes"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/No"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/no"
                        android:theme="@style/MyRadioButton" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/lin_buy4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/Kersh">

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/add_details"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/create_order_edit" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_buy5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/lin_buy4">

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="950"
                        android:textColor="@color/black" />
                </LinearLayout>

                <Button
                    android:id="@+id/complete"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/bt_com_buy_shape"
                    android:text="@string/complete_buy"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lin_buy5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_product_details"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toTopOf="@+id/cons_data"
                app:layout_constraintEnd_toEndOf="@+id/cons_data"
                app:layout_constraintStart_toStartOf="@+id/cons_data"
                app:layout_constraintTop_toTopOf="@+id/cons_data" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>