<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray0"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_transparent"
        android:padding="5dp">

        <TextView
            android:id="@+id/profile_txt1"
            style="@style/textstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/user_phone"
            app:layout_constraintTop_toTopOf="parent" />
        />

        <TextView
            android:id="@+id/account_phone"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_shap"
            android:inputType="phone"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt1" />

        <TextView
            android:id="@+id/profile_txt2"
            style="@style/textstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/user_Full_name"
            app:layout_constraintTop_toBottomOf="@+id/account_phone" />
        />

        <TextView
            android:id="@+id/account_name"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_shap"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt2" />

        <TextView
            android:id="@+id/profile_txt3"
            style="@style/textstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/user_password"
            app:layout_constraintTop_toBottomOf="@+id/account_name" />

        <EditText
            android:id="@+id/account_pass"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_shap"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt3" />
        />

        <Button
            android:id="@+id/edit_account"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/linear_shape"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_pass" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>